# line-producer

./: .gitignore  LineProducer.fr  Main.hs  README.md  default.nix  flake.nix  hie.yaml  line-producer.cabal  shell.nix
.github/workflows/: main.yml
app/: Main.hs
frege/: build.gradle
frege/src/main/: Coroutine.fr  CoroutineLine.fr  Generator.fr  Iteratee.fr  Main.fr  Pipe.fr
frege/src/test/: CoroutineLineTest.fr
src/: Coroutine.hs  Generator.hs  Iteratee.hs  LineProducer.hs  Pipe.hs  Producer.hs
